# LFTLaboratory

./: CMakeLists.txt  LFT.sln  hint.txt
Debug/: Solution.ilk
Prob1/: Grammar.cpp  Grammar.h  Prob1.vcxproj  Prob1.vcxproj.filters  ReaderAF.cpp  ReaderAF.h  ReaderST.cpp  ReaderST.h  RegularExpression.cpp  RegularExpression.h  Source.cpp  StyleCop.Cache  Util.cpp  Util.h
Prob1/Debug/: grammar.obj.enc  readeraf.obj.enc  vc140.idb
Prob1/Debug/Solution.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Solution.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
data/: 3m3c  G21.grm  G22.grm  G23.grm  G24.grm  G25.grm  G26.grm  a1.AFD  a2.AFD  abcbcdab.ST  automat  automat.grammar  c1.AFD  c1.afd.minAFD  c2.AFD  g1.grm  g1.grm.cleanGrm  g1_expected.grm  g3.grm  g4.grm  g4.grm.cleanGrm  grff.grm  lab5.AFD  lab5.AFD.minAFD  lab5.cloneAFD  lab5_1.AFD  lab5_1clean.AFD  lab5_1clean.afd.minAFD  lab5_2.AFD  lab5_2dirty.AFD  lab5_2dirty.AFD.dirtyMinAFD  lab5_2dirty.AFD.minAFD  ocvl  ocvl.grammar  st1  st1.AFD  st2  st2.AFD
